style: 修改标题名称

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" lang="zh-CN"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>China Map</Map></title>
+  <title>China Map</title>
   <style>
     html body {
       height: 100%;
